--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,30 +1,39 @@
-FROM python:3.12-slim-bookworm 
-
-# Оптимизация и безопасность
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+# Базовый образ
+FROM python:3.11-slim-bookworm
 
 # Установка зависимостей
-RUN apt-get update && apt-get install -y \
-    postgresql-client \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    gcc python3-dev libpq-dev && \
+    rm -rf /var/lib/apt/lists/*
 
-# Создание непривилегированного пользователя
-RUN useradd -m appuser && mkdir /usr/src/app && chown appuser:appuser /usr/src/app
-USER appuser
-
+# Рабочая директория
 WORKDIR /usr/src/app
 
-COPY --chown=appuser:appuser requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Копирование зависимостей
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt gunicorn
 
-# Установка Gunicorn только для продакшена
-RUN pip install --no-cache-dir gunicorn
+# Копирование проекта
+COPY . .
 
-COPY --chown=appuser:appuser . .
+# Копируем только нужные файлы
+COPY ./src /usr/src/app
+COPY ./deploy/docker-entrypoint.prod.sh /
+
+# Настройка скрипта
+RUN chmod +x /docker-entrypoint.prod.sh && \
+    chown root:root /docker-entrypoint.prod.sh
 
 # Сборка статики
 RUN python manage.py collectstatic --noinput
 
+# Создание непривилегированного пользователя
+RUN useradd -m appuser && chown appuser:appuser /usr/src/app
+USER appuser
+
+# Порт приложения
 EXPOSE 8000
+
+# Команда запуска
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "3", "config.wsgi:application"]
