--- a/deploy/nginx.prod.conf
+++ b/deploy/nginx.prod.conf
@@ -1,33 +1,20 @@
-upstream app_server {
-    server web:8000;
-}
-
 server {
     listen 80;
-    server_name yourdomain.com;
+    server_name 172.30.199.73;
 
-    # Статика
-    location /static/ {
-        alias /usr/src/app/staticfiles/;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
-    }
-
-    # Медиа
-    location /media/ {
-        alias /usr/src/app/media/;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
-    }
-
-    # Основные запросы
     location / {
-        proxy_pass http://app_server;
+        proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /usr/src/app/staticfiles/;
+    }
+
+    location /media/ {
+        alias /usr/src/app/media/;
     }
 }
