--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -44,7 +44,13 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     command: celery -A config worker --loglevel=info
+    env_file:
+    - .env.prod  # Явно подключаем файл с переменными
     environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}  # Должен совпадать с паролем в сервисе db
+      - POSTGRES_HOST=db
       - DJANGO_SETTINGS_MODULE=config.settings.prod
     volumes:
       - staticfiles:/usr/src/app/staticfiles
