Продакшен версия запускается

--- a/deploy/nginx.prod.conf
+++ b/deploy/nginx.prod.conf
@@ -1,20 +1,38 @@
 server {
     listen 80;
-    server_name 172.30.199.73;
-
+    server_name 172.17.10.208;  # твой IP
+    
+    # Статические файлы
+    location /static/ {
+        alias /app/staticfiles/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Медиа файлы
+    location /media/ {
+        alias /app/media/;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Django application
     location / {
         proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
-
-    location /static/ {
-        alias /usr/src/app/staticfiles/;
+    
+    location /health/ {
+        access_log off;
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
     }
-
-    location /media/ {
-        alias /usr/src/app/media/;
-    }
+    
+    client_max_body_size 100M;
 }
