--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,65 +1,109 @@
 
+
 services:
   web:
-    build:
+    build: 
       context: .
-      dockerfile: Dockerfile.prod
-    env_file:
-      - .env.prod  # Используем продакшен-переменные  
-    environment:
-      - DJANGO_SETTINGS_MODULE=config.settings.prod
-      - POSTGRES_HOST=db
+      dockerfile: Dockerfile
+    entrypoint: /app/deploy/web-entrypoint.sh
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4
     volumes:
-      - staticfiles:/usr/src/app/staticfiles
-      - media:/usr/src/app/media
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
+      - documents_volume:/app/finder/document
+    env_file:
+      - .env    
+    environment:
+      - DEBUG=False
+      - DJANGO_SETTINGS_MODULE=config.settings.prod
+       # ДОБАВЬ переменные БД ↓
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/ || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   db:
     image: postgres:16
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_prod:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
-    image: redis:alpine
+    image: redis:7-alpine
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data_prod:/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  celery:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    command: celery -A config worker --loglevel=info --concurrency=4
+    environment:
+      - DEBUG=False
+      - DJANGO_SETTINGS_MODULE=config.settings.prod
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+    env_file:
+      - .env    
+    volumes:
+      - documents_volume:/app/finder/document   
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
 
   nginx:
     image: nginx:alpine
+    volumes:
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
+      - ./deploy/nginx.prod.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
-    volumes:
-      - ./deploy/nginx.prod.conf:/etc/nginx/conf.d/default.conf
-      - staticfiles:/usr/src/app/staticfiles
-      - media:/usr/src/app/media
     depends_on:
       - web
-
-  celery:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-    command: celery -A config worker --loglevel=info
-    env_file:
-    - .env.prod  # Явно подключаем файл с переменными
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}  # Должен совпадать с паролем в сервисе db
-      - POSTGRES_HOST=db
-      - DJANGO_SETTINGS_MODULE=config.settings.prod
-    volumes:
-      - staticfiles:/usr/src/app/staticfiles
-      - media:/usr/src/app/media
-    depends_on:
-      - db
-      - redis
+    restart: unless-stopped
 
 volumes:
-  postgres_data:
-  staticfiles:
-  media:
+  postgres_data_prod:
+  redis_data_prod:
+  static_volume:
+  media_volume:
+  documents_volume:
