--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
 
   db:
     image: postgres:16
+    ports:
+      - "5433:5432" 
+
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
     environment:
