--- a/deploy/nginx.prod.conf
+++ b/deploy/nginx.prod.conf
@@ -1,38 +1,55 @@
 server {
     listen 80;
-    server_name 10.10.44.10;  # твой IP
-    
+    server_name infobase-01.okbtsp.corp;  
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name infobase-01.okbtsp.corp; 
+
+    ssl_certificate    /etc/nginx/ssl/infobase-01.okbtsp.corp.crt;
+    ssl_certificate_key /etc/nginx/ssl/infobase-01.okbtsp.corp.key;
+
+    # Протоколы и настройки безопасности
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
     # Статические файлы
     location /static/ {
         alias /app/staticfiles/;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
-    
+
     # Медиа файлы
     location /media/ {
         alias /app/media/;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
-    
+
     # Django application
     location / {
         proxy_pass http://web:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
-        
+
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
-    
+
     location /health/ {
         access_log off;
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
     }
-    
+
     client_max_body_size 100M;
 }
